--- a/styles.css
+++ b/styles.css
@@ -700,7 +700,7 @@ ul {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center top;
+    object-position: center;
     transition: var(--transition-smooth);
 }
 
@@ -764,12 +764,13 @@ ul {
     }
 
     .about__image {
-        height: 60vh;
-        order: -1;
+        aspect-ratio: 1;
+        order: 1;
     }
 
     .about__content {
         padding: 60px 40px;
+        order: 2;
     }
 }
 
